fixed overflow in css

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ li {
 .skills-box {
   width: 30%;
   padding: 10px;
+  overflow: auto;
   border: 3px solid white;
 }
 
